Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,9 +20,27 @@
 
     <section class="main-content">
       <h1>
-<a id="reflux-manifesto" class="anchor" href="#reflux-manifesto" aria-hidden="true"><span class="octicon octicon-link"></span></a>Reflux Manifesto</h1>
+<a id="refluxjs-manifesto" class="anchor" href="#refluxjs-manifesto" aria-hidden="true"><span class="octicon octicon-link"></span></a>Reflux.js Manifesto</h1>
 
-<p>Thoughts on using Reflux as I try to come to terms with it.</p>
+<p>Finding the idiomattic approach to using Reflux.js.</p>
+
+<p>Please, treat these as heuristics, because: </p>
+
+<ol>
+<li>I do not necessarily know what I'm talking about.</li>
+<li>Idioms are not always the best way to break down a problem.</li>
+</ol>
+
+<p>Got feedback?</p>
+
+<ul>
+<li>
+<a href="https://github.com/bunniesandbeatings/RefluxManifesto/fork">Fork Me on github</a> and submit pull requests.</li>
+<li>
+<a href="https://github.com/bunniesandbeatings/RefluxManifesto/issues/new">Open an issue</a>.</li>
+</ul>
+
+<hr>
 
 <h2>
 <a id="actions" class="anchor" href="#actions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Actions:</h2>
@@ -78,6 +96,8 @@
 </ul>
 </li>
 </ul>
+
+<hr>
 
 <h1>
 <a id="notes" class="anchor" href="#notes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Notes</h1>
